--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_CONNECT_URI=mongodb+srv://satyamr232:shibanee79@cluster0.dgdb3ju.mongodb.net/Hackathon?retryWrites=true&w=majority
+MONGODB_CONNECT_URI=Mongo_url
 PORT=8080
